form input does not overflow, user invite fix

--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -23,7 +23,7 @@ form input[type="text"],
 form input[type="file"],
 form input[type="password"],
 form select {
-  width: 100%;
+  width: 95%;
   padding: 8px;
   margin: 5px 0;
   border-radius: 4px;
